; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_render.c_scale_length.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_render.c_scale_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, float)* @scale_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scale_length(i32 %0, i32 %1, float %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca float, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store float %2, float* %6, align 4
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = add nsw i32 %7, %8
  %10 = sitofp i32 %9 to float
  %11 = load float, float* %6, align 4
  %12 = fmul float %10, %11
  %13 = fptosi float %12 to i32
  %14 = call i32 @round(i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = sitofp i32 %15 to float
  %17 = load float, float* %6, align 4
  %18 = fmul float %16, %17
  %19 = fptosi float %18 to i32
  %20 = call i32 @round(i32 %19)
  %21 = sub nsw i32 %14, %20
  ret i32 %21
}

declare dso_local i32 @round(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
